# gnu_thales

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  NeedMaintainers  README  README-hacking  README.coders  ReportUsage.sh  TODO  UnrealModules  acinclude.m4  aclocal.m4  bootstrap  bootstrap.conf  configure  configure.ac  configure.in  modules.af
contrib/: README.contrib
contrib/Crontab/: cron.sh
contrib/MRTG/: thalesinfo.pl
contrib/SQL-Queries/: Queries
contrib/UnrealCloaking/: README  cloak.php
contrib/chanlist/: COPYING  README  channels.php  example.css
contrib/clones/: README  clones.php
contrib/counter/: COPYING  Readme  compteur_js.php
contrib/digits2imgs/: README  digits_to_img.php
contrib/logfilter/: README  logfilter.sh
contrib/testbed/: README  chgCacheTime.sh  compileall.sh  killall.sh
contrib/whois/: dowhois.php
data/: Makefile.am  Makefile.in  mysql-bahamut.sql  mysql-hybrid.sql  mysql-ircdru.sql  mysql-sequana.sql  mysql-ultimate28.sql  mysql-ultimate30.sql  mysql-unreal.sql  thales.conf.default
doc/: Makefile.am  thales.texi
doc/examples/: overview-fixed.scm  overview.scm
examples/: README
examples/MRTG/: thalesinfo.pl
examples/clones/: clones.php
examples/counter/: README  compteur_js.php
examples/memphistools/: README  common.php  mysql.ini.php
examples/memphistools/counters/: chan_po.php  chans_max.php  chans_tc.php  servers_tc.php  users_max.php  users_tc.php
examples/memphistools/status/: chan_topic.php  server_on.php  user_ison.php  user_status.php
examples/nickinfo/: README  nickinfo.php
examples/recycledcounter/: README  recycpt.php
examples/whois/: dowhois.php  whois.html
guile-libircclient/doc/: Makefile.am  thales.texi
scheme/: Makefile.am  message_irc.c
src/: .gitignore  .indent.pro  Makefile.am  Makefile.in  actions.c  actions.h  cmd.c  cmd.h  compat.c  compat.h  conf.c  conf.h  config.h.in  db.c  db.h  defaults.c  defaults.h  defs.h  error.c  error.h  format.def  format.tpl  hashlist.c  hashlist.h  init_queries.sql.h  init_query.def  init_query.tpl  irc.c  irc.h  ircclient_set.h  log.c  log.h  log_worker.c  log_worker.h  main.c  memory.c  memory.h  messages.c  messages.h  misc.c  (+20 more)
src/ffi/: Makefile.am  definitions.h  init.c  misc.c
src/ffi/doc/: Makefile.am  guile-libircclient.texinfo
src/lisp/: Makefile.am  gnu-thales  prelude.scm
src/lisp/functional/: prelude.scm
src/lisp/im/: irc.scm
src/lisp/thales/: init-database.scm
src/thales/: .dir-locals.el  Makefile.in  compile.scm  core-modules.scm  prepare.scm  seal.scm  solver.scm  syntax.scm  thales
test/: seal.scm  test.scm
tests/: test-solver.scm
tests/im/: irc.scm
tools/: README
tools/crontab/: cron.sh
tools/logfilter/: README  logfilter.sh
tools/testbed/: README  killrunall.sh
